# StickfigureWebcam

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README-en.md  README.md  camera_manager.py  camera_selector.py  config.py  detection_worker.py  face_detection.py  gui_main.py  main.py  mypy.ini  performance_profiling_guide.md  persistent_config.py  pyproject.toml  renderer.py  requirements-dev.txt  requirements.txt  setup.py  stickfigure.py  system_tray.py  tox.ini  ui.py  virtual_camera.py
.run/: Start the program (legacy).run.xml  Start the program.run.xml  Start the program.xml  Uruchom program.run.xml
gui/: __init__.py  app.py  camera_thread.py  config_manager.py  control_panel.py  debug_window.py  launcher_window.py  launcher_window_ui.py  main_window.py  main_window_camera.py  main_window_rendering.py  main_window_system_tray.py  main_window_ui.py  settings_tabs.py
src/: __init__.py  main.py  main_refactored.py
src/app/: __init__.py  config_manager.py  controller.py  dependencies.py  ui_manager.py  video_pipeline.py
src/camera/: __init__.py  camera_capture.py  simple_virtual_camera.py  virtual_camera.py
src/config/: __init__.py  settings.py
src/drawing/: __init__.py  face_renderer.py  pose_analyzer.py  stick_figure.py  stick_figure_face_integration.py  stick_figure_renderer.py  utils.py
src/face/: __init__.py  face_mesh_detector.py
src/lighting/: __init__.py  adaptive_colors.py
src/pose/: __init__.py  pose_detector.py  posture_analyzer.py
src/utils/: __init__.py  custom_logger.py  logging_config.py  performance.py  setup_dialog.py  simple_logger.py  system_check.py  theme_utils.py
tests/: README.md  __init__.py  conftest.py
tests/app/: test_config_manager.py  test_integration_pipeline.py  test_video_pipeline.py
tests/camera/: test_camera_capture.py  test_virtual_camera.py
tests/drawing/: __init__.py  test_drawing_utils.py  test_face_renderer.py  test_hand_tracking.py  test_stick_figure.py
tests/pose/: __init__.py  (+3 more)
(+6 files in other folders)
