# pyproject.toml - Modern Python project configuration
# This file configures the project and is used by pip, build tools, and other utilities

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stick-figure-webcam"
version = "0.1.0"
description = "A Python application that turns webcam feed into an animated stick figure"
readme = "README.md"
authors = [
    { name = "philornot", email = "philornot@example.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.5.0",
    "mediapipe>=0.8.10",
    "numpy>=1.20.0",
    "pyvirtualcam>=0.5.0",
    "colorama>=0.4.4",
    "pytz>=2021.1",
    "sv-ttk>=2.4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.3.0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
    "mypy>=0.971",
    "pre-commit>=2.20.0",
]

[project.urls]
"Homepage" = "https://github.com/philornot/StickfigureWebcam"
"Bug Tracker" = "https://github.com/philornot/StickfigureWebcam/issues"

[project.scripts]
stick-figure-webcam = "src.main:main"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "mediapipe.*",
    "pyvirtualcam.*",
    "sv_ttk.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
